# vision

./: README.md
background_subtraction/: Readme.md  background_subtraction.py  backround_subtraction.py
background_subtraction/background_subtraction/: background_subtraction.pde
background_subtraction/background_subtraction_ofx/background_subtraction_ofx.xcodeproj/xcshareddata/xcschemes/: background_subtraction_ofx Debug.xcscheme  background_subtraction_ofx Release.xcscheme
background_subtraction/background_subtraction_ofx/src/: ofApp.cpp
entoptic/: .gitignore  CMakeLists.txt
entoptic-sim/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  OscDump  README.md  cmake_install.cmake  sim  sim.cpp
entoptic/oscpack/: CMakeLists.txt
entoptic/oscpack/ip/posix/: NetworkingUtils.cpp  UdpSocket.cpp
entoptic/src/: CMakeLists.txt  app.cc
entoptic/src/ip/: UdpSocket.cpp
experiments/: bg_sub.py  difference.py  people_detect.py  pimotion.py  track_motion.py
experiments/background_subtraction/: Readme.md  backround_subtraction.py
experiments/background_subtraction/background_subtraction_ofx/background_subtraction_ofx.xcodeproj/: project.pbxproj
experiments/background_subtraction/background_subtraction_ofx/background_subtraction_ofx.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
experiments/background_subtraction/background_subtraction_ofx/background_subtraction_ofx.xcodeproj/project.xcworkspace/xcshareddata/: background_subtraction_ofx.xccheckout
experiments/background_subtraction/background_subtraction_ofx/background_subtraction_ofx.xcodeproj/project.xcworkspace/xcuserdata/gfriedland.xcuserdatad/: UserInterfaceState.xcuserstate
experiments/background_subtraction/background_subtraction_ofx/src/: main.cpp  ofApp.h
